projects fixed, miss horizontal scrolling

--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -28,7 +28,8 @@ h3 {
 
 h4 {
 	font-size: 40px;
-	margin-bottom: 16px;
+	margin-bottom: 8px;
+	margin-top: 8px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
